présence membres
